# rpoetry

./: pyproject.toml
precommitr/: cli.py  utils.py
rpoetry/: cli.py  utils.py
tests/: test_precommitr.py  test_rpoetry.py
