[tool.poetry]
name = "precommitR"
version = "0.1.0"
description = ""
authors = ["Garrett Shipley <garrett.shipley7+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
precommitR = "precommitr.cli:app"

[tool.pytest.ini_options]
log_cli = true
